--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta charset="utf-8"/>
-<LINK REL="SHORTCUT ICON" HREF="http://fallenangelsoftware.com/stuff/files/5_0_Engine/HTML5/favicon.ico">
+<LINK REL="SHORTCUT ICON" HREF="https://fallenangelsoftware.com/stuff/files/5_0_Engine/HTML5/favicon.ico">
 <title>LettersFall[TM] Version 5</title>
 <link rel="stylesheet" type="text/css" href="index.css">
 
